# p2ren

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  debug_build_run.bat  gen_clang_ninja.bat
.zed/: debug.json  tasks.json
assets/: assets.md
assets/maps/: test2.map  test_level.map  test_level.mtl
assets/maps/autosave/: test_level.1.map  test_level.2.map  test_level.3.map  test_level.4.map
assets/shaders/: base-blinn-phong.frag  base.vert  flat_color.frag
assets/textures/Delven/: Attribution and License.txt
docs/: technical_design.md
docs/intern/: general_architecture.md
docs/internal/: general_architecture.md
src/glfwd_core/: CMakeLists.txt  resource_handle.h  resource_manager.h  time.cpp  time.h  transform.cpp  transform.h  window.cpp  window.h
src/glfwd_core/utility/: color.cpp  color.h  error.cpp  error.h  hash.h  type_info.h
src/glfwd_engine/: CMakeLists.txt  application.cpp  application.h  create_info.h
src/glfwd_example/: CMakeLists.txt  game.cpp  game.h  main.cpp
src/glfwd_renderer/: CMakeLists.txt  create_info.h  draw_modes.h  forward_renderer.cpp  forward_renderer.h  render_queue.h
src/glfwd_renderer/resources/: Camera.h  camera.cpp  camera.h  material.cpp  material.h  model.cpp  model.h
src/glfwd_renderer/rhi/: buffer.cpp  buffer.h  context.cpp  context.h  shader.cpp  shader.h  texture.cpp  texture.h
src/p2ren_core/: CMakeLists.txt  application.cpp  application.h  application_descriptor.h  hash.h  plugin.h  resource_handle.h  resource_manager.h  time.cpp  time.h  transform.cpp  transform.h  type_info.h  window.cpp  window.h
src/p2ren_core/intern/: application.cpp  error.cpp  window.cpp
src/p2ren_core/utility/: color.cpp  color.h  error.cpp  error.h  type_info.h
src/p2ren_engine/: CMakeLists.txt  application.cpp  application.h  create_info.h
src/p2ren_example/: CMakeLists.txt  game.cpp  game.h  main.cpp  program.cpp  program.h
src/p2ren_example/actors/: camera_controller.h
src/p2ren_render_hardware/: CMakeLists.txt  context.h
src/p2ren_render_hardware/intern/: context.cpp
src/p2ren_renderer/: CMakeLists.txt  create_info.h  draw_modes.h  forward_renderer.cpp  forward_renderer.h  render_queue.h  renderer.cpp  renderer.h
src/p2ren_renderer/resources/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h
src/p2ren_renderer/rhi/: buffer.cpp  buffer.h  context.cpp  context.h  shader.cpp  shader.h  texture.cpp  texture.h
src/p2ren_world/components/: transform.cpp
